Added darkmode icons

--- a/index.html
+++ b/index.html
@@ -1,32 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
+    <div class="dark_mode">
+        <strong class="sun">☀️</strong>
+        <strong class="moon">🌙</strong>
+    </div>
     <div class="container">
         <input type="text" class="input-value" id="input">
-        <span class="items" id="clear"><li>C</li></span>
-        <span class="items" id="divide"><li>/</li></span>
-        <span class="items" id="multiply"><li>*</li></span>
-        <span class="items" id="seven"><li>7</li></span>
-        <span class="items" id="eight"><li>8</li></span>
-        <span class="items" id="nine"> <li>9</li></span>
-        <span class="items" id="minus"><li>-</li></span>
-        <span class="items" id="four"><li>4</li></span>
-        <span class="items" id="five"><li>5</li></span>
-        <span class="items" id="six"><li>6</li></span>
-        <span class="items" id="plus"><li>+</li></span>
-        <span class="items" id="one"><li>1</li></span>
-        <span class="items" id="two"><li>2</li></span>
-        <span class="items" id="three"><li>3</li></span>
-        <span class="items" id="zero"><li>0</li></span>
-        <span class="items" id="double_zero"><li>00</li></span>
-        <span class="items" id="dot"><li>.</li></span>
-        <span class="items" id="equal"><li> = </li></span>
+        <span class="items" id="clear">
+            <li>C</li>
+        </span>
+        <span class="items" id="divide">
+            <li>/</li>
+        </span>
+        <span class="items" id="multiply">
+            <li>*</li>
+        </span>
+        <span class="items" id="seven">
+            <li>7</li>
+        </span>
+        <span class="items" id="eight">
+            <li>8</li>
+        </span>
+        <span class="items" id="nine">
+            <li>9</li>
+        </span>
+        <span class="items" id="minus">
+            <li>-</li>
+        </span>
+        <span class="items" id="four">
+            <li>4</li>
+        </span>
+        <span class="items" id="five">
+            <li>5</li>
+        </span>
+        <span class="items" id="six">
+            <li>6</li>
+        </span>
+        <span class="items" id="plus">
+            <li>+</li>
+        </span>
+        <span class="items" id="one">
+            <li>1</li>
+        </span>
+        <span class="items" id="two">
+            <li>2</li>
+        </span>
+        <span class="items" id="three">
+            <li>3</li>
+        </span>
+        <span class="items" id="zero">
+            <li>0</li>
+        </span>
+        <span class="items" id="double_zero">
+            <li>00</li>
+        </span>
+        <span class="items" id="dot">
+            <li>.</li>
+        </span>
+        <span class="items" id="equal">
+            <li> = </li>
+        </span>
     </div>
 </body>
+
 </html>
